# slam-warmup

./: .clangd  README.md  requirements.txt
week1_filter_slam/: 01_bayes_filter.ipynb  01_bayes_filter_handmade.cpp
week2_Nonlinear_Optimization/: eigenMatrix
week2_Nonlinear_Optimization/eigenMatrix.dSYM/Contents/: Info.plist
week2_Nonlinear_Optimization/math/: CMakeLists.txt  eigenMatrix.cpp  useGeometry.cpp
